stronghart initial checkin

--- a/stronghart.html
+++ b/stronghart.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Bankers' Thrift Corporation, Chicago
-permalink: /banksthrift/
+title: Stronghart Co., Chicago
+permalink: /stronghart/
 ---
 
 <div class="home">
@@ -11,7 +11,7 @@ permalink: /banksthrift/
 </div>
 
 <div class="inventories">
-    {% assign pages = site.banksthrift | sort: "index" %}
+    {% assign pages = site.stronghart | sort: "index" %}
     {% for page in pages %}
     <article class="inventory">
         <h4><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h4>
